# sepsis-early-detection-ml

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  train_sepsis.py
.github/workflows/: ci.yml
data/: balanced_mortality.csv  balanced_readmission.csv  balanced_sepsis.csv
models/: sepsis_gb_model.joblib
reports/: sepsis_metrics.json
src/sepsis_ml/: __init__.py  cli.py  data.py  evaluate.py  features.py  train.py
tests/: conftest.py  test_leakage.py  test_train_pipeline.py
