[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sepsis-ml"
version = "0.2.0"
description = "Early sepsis risk detection ML pipeline (portfolio project)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "scikit-learn>=1.4,<2",
    "matplotlib>=3.9,<4",
    "joblib>=1.3,<2",
    "imbalanced-learn>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
]

[project.scripts]
sepsis-ml = "sepsis_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
